classDiagram
    direction TB
    class Entity {
        #repository : Repository
        -errors : array
        #post_type : string|false
        #capability_type : string|false
        +WP_Post : WP_Post
        -validated : bool
        +cap : object
        +__construct(which)
        +get_repository()
        +get_date_i18n(date)
        +get_mapped_property(prop)
        #set_mapped_property(prop, value)
        +set(prop, value)
        +get(prop)
        +set_status(value)
        +validate()
        +validate_prop(prop)
        +get_errors()
        +$get_post_type()
        +$get_capability_type()
        +get_status()
        +get_db_identifier()
        +get_id()
        +add_error(type, message)
        +reset_errors()
        +get_validated()
        #set_validated(value)
        #set_as_valid()
        +_toArray()
        +_toJson()
        +can_read(user)
        +can_edit(user)
        +can_delete(user)
        +can_publish(user)
        +get_capabilities()
        +diff(which)
    }
    class Log {
        #title : mixed
        +post_type : mixed
        #repository : string
        +__construct(which)
        +__toString()
        +_toArray()
        +get_capabilities()
        +set_collection_id(collection_id)
        +get_collection_id()
        +get_title()
        +get_user_name()
        +get_date()
        +get_slug()
        +get_description()
        +get_user_id()
        +get_old_value()
        +get_new_value()
        +set_title(value)
        +set_description(value)
        +set_user_id(value)
        +set_old_value(value)
        +set_new_value(value)
        +get_log_diffs()
        +get_object_type()
        +set_object_type(value)
        +get_object_id()
        +set_object_id(value)
        +set_item_id(item_id)
        +get_item_id()
        +get_action()
        +set_action(value)
        +approve()
    }
    Entity ..> Entity
    Entity <|-- Log
